--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "NODE_ENV=test grunt test",
     "build": "webpack --watch"
   },
-  "author": "Hack Reactor",
+  "author": "The Smarty Sprouts",
   "license": "MIT",
   "dependencies": {
     "babel-cli": "^6.24.1",
@@ -29,7 +29,6 @@
     "express": "^4.15.2",
     "express-session": "^1.15.1",
     "grunt-pg": "https://github.com/watsoncj/grunt-pg.git",
-    "http": "^0.0.0",
     "knex": "^0.12.9",
     "mongoose": "^4.11.3",
     "morgan": "^1.8.1",
@@ -41,8 +40,7 @@
     "pg": "^6.1.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "redis": "^2.7.1",
-    "socket.io": "^2.0.3"
+    "redis": "^2.7.1"
   },
   "devDependencies": {
     "babel-loader": "^7.0.0",
