--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "course.thesis",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=7.1.0"
+  },
   "scripts": {
     "start": "nodemon server",
+    "db-start": "mongod --dbpath ./db/data",
     "test": "NODE_ENV=test grunt test",
     "build": "webpack --watch"
   },
