--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,4 @@ dist/
 # see https://npmjs.org/doc/faq.html#Should-I-check-my-node_modules-folder-into-git
 node_modules/
 bower_components/
-db/data
+db/data/
