--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "node": ">=7.1.0"
   },
   "scripts": {
-    "start": "nodemon server",
+    "start": "node server/index.js",
+    "server-dev": "nodemon server",
     "db-start": "mongod --dbpath ./db/data",
     "test": "NODE_ENV=test grunt test",
     "build": "webpack --watch"
