--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.15.2",
     "express-session": "^1.15.1",
     "grunt-pg": "https://github.com/watsoncj/grunt-pg.git",
+    "http": "^0.0.0",
     "knex": "^0.12.9",
     "mongoose": "^4.11.3",
     "morgan": "^1.8.1",
@@ -40,7 +41,8 @@
     "pg": "^6.1.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "redis": "^2.7.1"
+    "redis": "^2.7.1",
+    "socket.io": "^2.0.3"
   },
   "devDependencies": {
     "babel-loader": "^7.0.0",
