--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server/index.js",
     "server-dev": "nodemon server",
     "db-start": "mongod --dbpath ./db/data",
-    "test": "NODE_ENV=test grunt test",
+    "test": "grunt test",
     "build": "webpack --watch"
   },
   "author": "The Smarty Sprouts",
@@ -51,7 +51,7 @@
     "grunt": "~0.4.5",
     "grunt-eslint": "^19.0.0",
     "grunt-mocha-test": "^0.13.2",
-    "mocha": "^3.2.0",
+    "mocha": "^3.5.0",
     "node-mocks-http": "^1.6.1",
     "supertest": "^3.0.0",
     "webpack": "^2.3.2",
