--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server/index.js",
     "server-dev": "nodemon server",
     "db-start": "mongod --dbpath ./db/data",
-    "test": "grunt test",
+    "test": "NODE_ENV=test grunt test",
     "build": "webpack --watch"
   },
   "author": "The Smarty Sprouts",
